# krkrsdl3

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build-linux.sh  vcpkg.json
.github/workflows/: build-android.yml
android/app/: AndroidManifest.xml  build.gradle
cpp/: cmake_console.txt  cmake_main.txt  eventCallbackFun.h  krkrsdl.cpp  krkrsdl_android.cpp  krkrsdl_gl.cpp
cpp/core/: CMakeLists.txt
cpp/core/archive/: TVPArchive.cpp  TVPArchive.h  TVPStorage.cpp  TVPStorage.h  TextStream.cpp  TextStream.h  UtilStreams.cpp  UtilStreams.h  XP3Archive.cpp  XP3Archive.h
cpp/core/main/: SystemControl.cpp  TVPApplication.cpp  TVPEvent.cpp  TVPEvent.h  TVPSystem.cpp  TVPSystem.h  TVPThread.cpp  WindowIntf.cpp  WindowIntf.h
cpp/core/msg/: Log.cpp  TVPDebug.cpp  TVPMsg.cpp  TVPMsg.h  tvp_msg.h  tvp_msg_inc.h
cpp/core/render/: DrawDevice.cpp  DrawDevice.h  LayerManager.cpp  LayerManager.h  MainWindowLayer.cpp  MainWindowLayer.h  RenderManager_gl.cpp  TVPCompositor.cpp  TVPCompositor.h
cpp/core/script/: TVPScript.cpp  tjsNativeAsyncTrigger.cpp  tjsNativeBasicDrawDevice.cpp  tjsNativeBasicDrawDevice.h  tjsNativeBitmap.cpp  tjsNativeBitmap.h  tjsNativeBitmapLayerTreeOwner.cpp  tjsNativeBitmapLayerTreeOwner.h  tjsNativeCDDASoundBuffer.cpp  tjsNativeCDDASoundBuffer.h  tjsNativeClipboard.cpp  tjsNativeClipboard.h  tjsNativeDebug.cpp  tjsNativeFont.cpp  tjsNativeFont.h  tjsNativeImageFunction.cpp  tjsNativeImageFunction.h  tjsNativeKAGParser.cpp  tjsNativeKAGParser.h  tjsNativeLayer.cpp  tjsNativeLayer.h  tjsNativeMIDISoundBuffer.cpp  tjsNativeMIDISoundBuffer.h  tjsNativeMenuItem.cpp  tjsNativeMenuItem.h  tjsNativePad.cpp  tjsNativePad.h  tjsNativePhaseVocoder.cpp  tjsNativePhaseVocoder.h  tjsNativePlugins.cpp  tjsNativeRect.cpp  tjsNativeRect.h  tjsNativeScript.cpp  tjsNativeStorages.cpp  tjsNativeSystem.cpp  tjsNativeTimer.cpp  tjsNativeTimer.h  tjsNativeVideoOverlay.cpp  tjsNativeVideoOverlay.h  tjsNativeWaveSoundBuffer.cpp  (+2 more)
cpp/core/tjs2/: tjs.cpp  tjs.h  tjs.tab.cpp  tjsArray.cpp  tjsArray.h  tjsBinarySerializer.cpp  tjsByteCodeLoader.cpp  tjsCommHead.h  tjsCompileControl.cpp  tjsConfig.cpp  tjsConfig.h  (+41 more)
cpp/environ/: CMakeLists.txt  DetectCPU.cpp  DetectCPU.h  KRMovieOverlay.cpp  MainWindowLayer.cpp  Other.cpp  Platform.cpp  Platform.h  PlatformAudio.h  PlatformFile.h  PlatformThread.h  PlatformVideo.h  PlatformView.h  TVPConfig.cpp  TVPConfig.h  WaveMixer.cpp  eventCallbackFun.h
cpp/plugins/: AlphaMovie.cpp  CMakeLists.txt  DrawDeviceD3D.cpp  Extension.cpp  Extension.h  LayerExAreaAverage.cpp  LayerExBTOA.cpp  LayerExBase.cpp  LayerExBase.hpp  LayerExImage.cpp  LayerExImage.h  LayerExMovie.cpp  LayerExPerspective.cpp  LayerExRaster.cpp  PackinOne.cpp  TVPPlugin.cpp  TVPPlugin.h  addFont.cpp  csvParser.cpp  dirlist.cpp  expat.cpp  fftgraph.cpp  fstat.cpp  getSample.cpp  gfxEffect.cpp  json.cpp  kirikiroid2.cpp  saveStruct.cpp  scriptsEx.cpp  shrinkCopy.cpp  textrender.cpp  varfile.cpp  win32dialog.cpp  windowEx.cpp  wutcwf.cpp  xp3filter.cpp  xp3filter.h
cpp/tjs2/: CMakeLists.txt  tjs.h  tjsArray.cpp  tjsConfig.cpp  tjsConfig.h  tjsDictionary.cpp  tjsError_jp.h  tjsMessage.cpp  tjsVariantString.cpp
emscripten/: genlist.py  wasm_server.py  wasm_shell.html
ohos/: build-ohos.ps1  build-profile.json5  oh-package.json5
ohos/AppScope/: app.json5
ohos/entry/: build-profile.json5  oh-package-lock.json5  oh-package.json5
ohos/prebuild/: hpk_build.csv
script/: build-emscripten.bat  build-linux-console.sh  build-ohos.bat  build-windows-32.bat  build-windows-console.bat  build-windows-msvc.bat
vcpkg/triplets/: wasm32-emscripten.cmake
(+180 files in other folders)
